--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://publishedproject.github.io/forDJ",
   "scripts": {
     "dev": "node server",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.jsx --outDir dist/server",
-    "preview": "cross-env NODE_ENV=production node server"
+    "preview": "cross-env NODE_ENV=production node server",
+    "build:static": "vite build --outDir dist",
+    "predeploy": "npm run build:static",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "compression": "^1.8.0",
@@ -23,6 +27,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "cross-env": "^7.0.3",
+    "gh-pages": "^6.3.0",
     "vite": "^6.1.1"
   }
 }
